examples/test/testpolicy8283.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy8283
  namespace: namespace443
spec:
  podSelector:
    matchLabels:
      key28: value20
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key29: value26
          key26: value44
      podSelector:
        matchLabels:
          key3: value49
          key15: value18
